# scu-plus-ocr

./: README.md
python/: server.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
rust2/: .gitignore  Cargo.toml  dockerfile  test_post.py
rust2/src/: main.rs  ocr.rs
